feat: 增加路由以及显示用户数据

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<nz-layout>
+    <nz-header>
+        <app-header-top></app-header-top>
+    </nz-header>
+    <nz-layout>
+        <nz-sider>
+            <app-side-menu></app-side-menu>
+        </nz-sider>
+        <nz-content>
+            <router-outlet></router-outlet>
+        </nz-content>
+    </nz-layout>
+</nz-layout>
