--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div [ngClass]="{'isOpacity': isOpacity}">
+    <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+        <nz-form-item>
+            <nz-form-control nzErrorTip="Please input your username!">
+                <nz-input-group>
+                    <input type="text" nz-input formControlName="userName" placeholder="Username" />
+                </nz-input-group>
+            </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+            <nz-form-control nzErrorTip="Please input your Password!">
+                <nz-input-group>
+                    <input type="password" nz-input formControlName="password" placeholder="Password" />
+                </nz-input-group>
+            </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+            <nz-form-control>
+                <label nz-checkbox formControlName="remember">
+                    <span>Remember me</span>
+                </label>
+                <a class="login-form-forgot" class="login-form-forgot">Forgot password</a>
+                <button nz-button class="login-form-button" [nzType]="'primary'">Log in</button>
+                Or
+                <a>register now!</a>
+            </nz-form-control>
+        </nz-form-item>
+    </form>
+</div>
+<div class="dynamic" *ngIf="showComponent">
+    <div class="spinner">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+    </div>
+</div>
