--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+div::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  /**/
+}
+div::-webkit-scrollbar-track {
+  background: rgb(239, 239, 239);
+  // background-color: #f2784b;;
+  border-radius: 2px;
+}
+div::-webkit-scrollbar-thumb { 
+  background: #f2784b !important;
+  border-radius: 10px;
+}
+div::-webkit-scrollbar-thumb:hover {
+  background: #ddd;
+} 
+div::-webkit-scrollbar-corner {
+  background: #179a16;
+}
