--- a/src/app/home/components/header-top/header-top.component.html
+++ b/src/app/home/components/header-top/header-top.component.html
@@ -5,6 +5,7 @@
             <span>我的</span>
             <span>设置</span>
             <span>退出</span>
+            {{time}}
         </div>
     </div>
 </div>
